# trainingdevops

./: .gitignore  .pre-commit-config.yaml  CHANGELOG  CHANGELOG.md  Makefile  README.md  mypy.ini  pyproject.toml  tox.ini
.github/workflows/: test-check.yaml
docs/: api.rst  conf.py  glossary.rst  index.rst  pyenv.md  windows-setup.md
explanation/: macbook-setup.md  poetry.md  pyenv.md  windows-setup.md
scripts/: make.ps1
src/ff/examplelib/: __init__.py  things.py
src/ff/examplelib/foo/: bla.py
tests/: test_things.py
tests/foo/: test_bla.py
